// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package db

import (
	"database/sql"
)

type Avatar struct {
	UserID    int64
	HatID     sql.NullInt32
	ShirtID   sql.NullInt32
	JacketID  sql.NullInt32
	BottomsID sql.NullInt32
	ShoesID   sql.NullInt32
}

type Item struct {
	ID       int32
	Name     string
	Category int32
	ImageUrl string
}

type User struct {
	ID   int64
	Name string
}

type UserItem struct {
	UserID int64
	ItemID int32
}
